# FastAPI-Assginment-Middle

./: .env  main.py  pyproject.toml
migrations/models/: 2_20250327154410_update.py  3_20250402132223_update.py  3_20250402150133_update.py
src/configs/: base.py  database.py
src/models/: likes.py  movies.py  reviews.py  users.py
src/routers/: likes.py  movies.py  notifications.py  reviews.py  users.py
src/schemas/: likes.py  movies.py  reviews.py  users.py
src/signals/: __init__.py  follow_signals.py  review_like_signals.py
src/utils/: auth.py  file.py  jwt.py  websocket.py
