[project]
name = "fastapi-assignment-middle"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["fastapi[standard] (>=0.115.11,<0.116.0)", "black (>=25.1.0,<26.0.0)", "ruff (>=0.9.10,<0.10.0)", "mypy (==1.13.0)", "passlib[bcrypt] (>=1.7.4,<2.0.0)", "pyjwt (>=2.10.1,<3.0.0)", "pydantic-settings (>=2.8.1,<3.0.0)", "tortoise-orm[asyncmy] (==0.23.0)", "cryptography (==44.0.0)", "aerich (==0.8.1)", "tomlkit (==0.13.2)", "python-multipart (>=0.0.20,<0.0.21)"]

[[project.authors]]
name = "meoyoug"
email = "eodyd426@gmail.com"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "src.configs.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
